# pd-with-gpu

./: .gitignore  CMakeLists.txt  P-free_draft.md  README.md
assets/meshes/: bar_tet.mesh  spot.ply
cmake/: utils.cmake
docs/: A_mat_me.txt  A_mat_ref.txt  q_me.txt  q_ref.txt  test_A_me.txt  test_A_std.txt  test_b_n_std.txt  test_data.txt  test_data_2.txt  test_ref.txt
docs/testdata/: test_b_0.txt  test_b_me.txt  test_b_n_me.txt
pd/: CMakeLists.txt
pd/include/instancing/: instancing.h  instantiator.h
pd/include/io/: io_data.h  mesh_io.h  simulation_control.h
pd/include/meshgen/: mesh_generator.h
pd/include/model/: cloth.h  model_generator.h
pd/include/pd/: a_jacobi.h  algo_ctrl.h  bending_constraint.h  cholesky_direct.h  constraint.h  cutest.h  deformable_mesh.h  edge_length_constraint.h  edge_strain_constraint.h  gpu_local_solver.h  linear_sys_solver.h  parallel_jacobi.h  physics_tick.h  positional_constraint.h  solver.h  svd3_cuda.h  tet_strain_constraint.h  tick.h  types.h
pd/include/primitive/: block.h  floor.h  primitive.h  sphere.h  torus.h
pd/include/texturegen/: texture_generator.h
pd/include/ui/: callbacks.h  input_callbacks.h  menus.h  obj_manager.h  physics_params.h  screen_capture_plugin.h  solver_params.h  user_control.h
pd/src/: a_jacobi.cu  bending_constraint.cu  block.cpp  cholesky_direct.cpp  constraint.cpp  cutest.cu  deformable_mesh.cpp  edge_length_constraint.cpp  edge_length_constraint.cu  edge_strain_constraint.cu  floor.cpp  gpu_local_solver.cu  input_callbacks.cpp  instancing.cpp  instantiator.cpp  main.cpp  menus.cpp  mesh_generator.cpp  obj_manager.cpp  parallel_jacobi.cu  positional_constraint.cpp  positional_constraint.cu  solver.cpp  sphere.cpp  tet_strain_constraint.cu  texture_generator.cpp  tick.cpp  torus.cpp
pd/src/io/: mesh_io.cpp  simulation_control.cpp
pd/src/meshgen/: mesh_generator.cpp
pd/src/pd/: a_jacobi.cu  bending_constraint.cu  cholesky_direct.cpp  constraint.cpp  deformable_mesh.cpp  gpu_local_solver.cu  parallel_jacobi.cu  physics_tick.cpp  solver.cpp  svd3_cuda.cu  tet_strain_constraint.cu
pd/src/primitive/: floor.cpp  sphere.cpp
renderer/: CMakeLists.txt
renderer/include/instancing/: instantiator.h
renderer/include/rendering/: rendering_tick.h
renderer/include/test/: unit_test.h
renderer/include/ui/: input_callbacks.h  menus.h  obj_manager.h  screen_capture_plugin.h
renderer/src/: main.cpp
renderer/src/instancing/: instantiator.cpp
renderer/src/rendering/: rendering_tick.cpp
renderer/src/ui/: input_callbacks.cpp  menus.cpp  obj_manager.cpp
util/: CMakeLists.txt
util/include/util/: adj_list_graph.h  cpu_timer.h  cuda_managed.h  gpu_helper.h  helper_cuda.h  progress_percentage.h  shader_file_io.h  singleton.h  svd3_cuda.h
util/src/: adj_list_graph.cpp  cpu_timer.cpp  cuda_managed.cu  gpu_helper.cu  progress_percentage.cpp  svd3_cuda.cu
